--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WebDataBase": "Data Source=localhost;Initial Catalog=WebFashion;Integrated Security=True;User ID=sa;Password=Anhdasai123@;Trust Server Certificate=True;"
+    "WebDataBase": "Data Source=LAPTOP-44634RVO\\DAILE;Initial Catalog=WebFashion;User ID=sa;Password=0986341885dai;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
